--- a/src/common/fonts/style.css
+++ b/src/common/fonts/style.css
@@ -1,13 +1,4 @@
-@font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?u87odc');
-  src:  url('fonts/icomoon.eot?u87odc#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?u87odc') format('truetype'),
-    url('fonts/icomoon.woff?u87odc') format('woff'),
-    url('fonts/icomoon.svg?u87odc#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -18,10 +9,15 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
+        vertical-align: middle;
+    margin-right: 4px;
+    
+    text-align: center;
+    /*font-size: 18px;*/
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
 }
 
 .icon-home:before {
@@ -314,4 +310,7 @@
 }
 .icon-dropbox:before {
   content: "\eaae";
+}
+.icon-plus:before {
+  content: "\ea0a";
 }
